add asset for certificate gallery

--- a/assets/scss/breakpoints/_800up.scss
+++ b/assets/scss/breakpoints/_800up.scss
@@ -233,3 +233,14 @@ CONTACT PAGE STYLING
     margin-right: 0;
 	}
 }
+
+/****************************
+Gallery Certificates Styling
+*****************************/
+.responsive {
+    width: 50%;
+}
+
+div.img {
+    height: 300px;
+}
