--- a/assets/scss/breakpoints/_1200up.scss
+++ b/assets/scss/breakpoints/_1200up.scss
@@ -5,3 +5,11 @@ body {
 .container {
   max-width: 990px;
 }
+
+/****************************
+Gallery Certificates Styling
+*****************************/
+
+div.img {
+    height: 340px;
+}
