--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,10 @@
 
 {% include head.html %}
 
-<body>
+<body>	
 
    {% include header.html %}
-
+   <div id="buttonUp"></div>
    <div class="content">
       <div class="container">
          {{ content }}
