--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,21 @@
- <div class="header">
-     <div class="container">
-         <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
-         <nav class="nav-collapse">
-             <ul class="noList">
-                 {% for link in site.navigation %}{% assign current = nil %}{% if page.url contains link.url or forloop.first and page.url == '/' or page.url == 'index.html' %}{% assign current = 'current' %}{% endif %}
-                 <li class="element {% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
-                     <a href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
-                 </li> 
-                 {% endfor %}
-               <!--   <li> <a href="https://github.com/brianmaierjr/long-haul" target="_blank">GitHub</a></li>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGBV6VC" height="0" width="0"
+        style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+<div class="header">
+    <div class="container">
+        <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+        <nav class="nav-collapse">
+            <ul class="noList">
+                {% for link in site.navigation %}{% assign current = nil %}{% if page.url contains link.url or forloop.first and page.url == '/' or page.url == 'index.html' %}{% assign current = 'current' %}{% endif %}
+                <li class="element {% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
+                    <a href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+                </li>
+                {% endfor %}
+                <!--   <li> <a href="https://github.com/brianmaierjr/long-haul" target="_blank">GitHub</a></li>
                  <li><a href="https://github.com/brianmaierjr/long-haul/archive/master.zip">Download Theme</a></li> -->
-             </ul>
-         </nav>
-     </div>
- </div><!-- end .header -->
+            </ul>
+        </nav>
+    </div>
+</div>
+<!-- end .header -->
