add google tag html verification

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,9 @@
     <meta content="{{ site.url }}/assets/img/{{ page.image }}" property="og:image"> {% else %}
     <meta content="{{ '/assets/img/image-header.jpg' | prepend: site.url }}" property="og:image"> {% endif %}
 
+    <!-- Tag html meta google -->
+    <meta name="google-site-verification" content="oKuyvS0DAtIvGYc_qRIEhuWigpsGQ6CAwPUGbSowkBA" />
+
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@{{ site.social.twitter }}">
